--- a/backend/.env
+++ b/backend/.env
@@ -1,10 +1,18 @@
 
-# Database configuration
-DB_HOST=172.16.7.50
-DB_PORT=3306
-DB_USER=scryptcase
-DB_PASSWORD=Mt*1329*--1
+# Database DEVELOPER FACTURACION 
+DBF_HOST=172.16.7.50
+DBF_PORT=3306
+DBF_USER=scryptcase
+DBF_PASSWORD=Mt*1329*--1
 PORT=3000
+
+# Database DEVELOPER OTROS (Clientes - Ptoductos) 
+DBO_HOST=172.16.7.50
+DBO_PORT=3306
+DBO_USER=scryptcase
+DBO_PASSWORD=Mt*1329*--1
+PORT=3000
+
 
 
 # Opcional: configuración adicional
