--- a/backend/.env
+++ b/backend/.env
@@ -1,18 +1,20 @@
 
 # Database DEVELOPER FACTURACION 
-DBF_HOST=172.16.7.50
-DBF_PORT=3306
-DBF_USER=scryptcase
-DBF_PASSWORD=Mt*1329*--1
-PORT=3000
+CONN-FACTURACION-HOST   = 172.16.7.50
+CONN-FACTURACION-PORT   = 3306
+CONN-FACTURACION-USER   = scryptcase
+CONN-FACTURACION-PASS   = Mt*1329*--1
+CONN-FACTURACION-DB     = facturacion
 
-# Database DEVELOPER OTROS (Clientes - Ptoductos) 
-DBO_HOST=172.16.7.50
-DBO_PORT=3306
-DBO_USER=scryptcase
-DBO_PASSWORD=Mt*1329*--1
-PORT=3000
+# Database BD OTROS (Clientes - Ptoductos) 
+CONN-EXAMPLE-HOST   = 172.16.7.50
+CONN-EXAMPLE-PORT   = 3306
+CONN-EXAMPLE-USER   = scryptcase
+CONN-EXAMPLE-PASS   = Mt*1329*--1
+CONN-EXAMPLE-DB     = webservices
 
+# VARIABLE DE APLICACION 
+PORT                = 3000
 
 
 # Opcional: configuración adicional
